#416: Code clean-up of GetItemDescription* UCs